--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,2 +1,25 @@
-<h1>This is Gautam Naik</h1>
-<h3>Take A look at my Site</h3>
+<section class="top-container">
+    <nav class="initial-nav">
+        <ul class="">
+            <li class="float-left"><a href="#">logo</a></li>
+
+            <li class=""><a href="#">projects</a></li>
+            <li class=""><a href="#">skills</a></li>
+            <li class=""><a href="#">about</a></li>
+        </ul>
+    </nav>
+    <div class=" my-name-main">
+        <div class="row align-center">
+            <div class="column small-10 medium-6 large-4 parent">
+                <h1 class="name">Gautam Naik</h1>
+                <h5 class="desig">Designer & Developer</h5>
+            </div>
+        </div>
+        <!--<h1> <span class="name">GAUTAM NAIK</span></h1>
+        <h5> <span class="desig">Designer</span></h5>-->
+    </div>
+    <div class="down-arrow">
+        down
+    </div>
+
+</section>
