--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,7 +1,9 @@
 <section class="top-container">
     <nav class="initial-nav">
         <ul class="">
-            <li class="float-left"><a href="#">logo</a></li>
+            <li class="float-left mylogotop">
+                <img src="{{root}}assets/img/mylogo.svg" alt="">
+            </li>
 
             <li class=""><a href="#">projects</a></li>
             <li class=""><a href="#">skills</a></li>
@@ -11,12 +13,15 @@
     <div class=" my-name-main">
         <div class="row align-center">
             <div class="column small-10 medium-6 large-4 parent">
-                <h1 class="name">Gautam Naik</h1>
-                <h5 class="desig">Designer & Developer</h5>
+                <div><h1 class="name shimmer">Gautam Naik</h1></div>
+                <div class="row zeromargin">
+                    <div class="columns small-6 desig"><h5 class="zeromargin">&nbsp;Designer&nbsp;</h5></div>
+                    <div class="columns small-6 dev"><h5 class="zeromargin">Developer</h5></div>
+                </div>
+                
+                <!--<h5 class="desig">Designer & Developer</h5>-->
             </div>
         </div>
-        <!--<h1> <span class="name">GAUTAM NAIK</span></h1>
-        <h5> <span class="desig">Designer</span></h5>-->
     </div>
     <div class="down-arrow">
         down
