--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,7 +21,7 @@
                         <h5 class="zeromargin">&nbsp;Designer&nbsp;</h5>
                     </div>
                     <div class="columns small-6 dev">
-                        <h5 class="zeromargin">Developer</h5>
+                        <h5 class="zeromargin" data-text="">Developer</h5>
                     </div>
                 </div>
 
