--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,7 +21,7 @@
                         <h5 class="zeromargin">&nbsp;Designer&nbsp;</h5>
                     </div>
                     <div class="columns small-6 dev">
-                        <h5 class="zeromargin" data-text="">Developer</h5>
+                        <h5 class="zeromargin" data-text=""> Developer</h5>
                     </div>
                 </div>
 
@@ -34,7 +34,9 @@
     </div>
 
 </section>
-<section id="section2">
-
+<section id="section2" >
+<div class="row">
+    <h1>About Me</h1>
+</div>
 
 </section>
