--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,7 +2,7 @@
     <nav class="initial-nav">
         <ul class="">
             <li class="float-left mylogotop">
-                <img src="{{root}}assets/img/mylogo.svg" alt="">
+                <img src="{{root}}assets/img/Asset4.svg" alt="">
             </li>
 
             <li class=""><a href="#">projects</a></li>
@@ -34,9 +34,17 @@
     </div>
 
 </section>
-<section id="section2" >
-<div class="row">
-    <h1>About Me</h1>
-</div>
+<section id="section2">
+    <div class="row column aboutme">
+        <!--<img class="mylogo-aboutme" src="{{root}}assets/img/Asset4.svg" alt="">-->
+        <h1 class="header">About Me</h1>
+        <hr>
+        <h1 class="content">
+            Hi, I'm Gautam Naik, a <span>Frontend Web Developer</span> ,<span>UI/UX Designer</span> and a self proclaimed
+            <span>Game Developer.</span>
 
+        </h1>
+
+
+    </div>
 </section>
